lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:14: error: lessons.lander.universe.Segment does not take parameters
	if(getX()>segmentPose(0).x && getX()<segmentPose(1).x)
                             ^Lander:44: error: lessons.lander.universe.Segment does not take parameters
	else if(getX()>segmentPose(0).x && getX()>segmentPose(1).x)
                                  ^Lander:49: error: lessons.lander.universe.Segment does not take parameters
	else if(getX()<segmentPose(0).x && getX()<segmentPose(1).x)
                                  ^